--- a/SolverInc/package.json
+++ b/SolverInc/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "express": "^4.17.1",
+    "http": "0.0.0",
+    "path": "^0.12.7",
+    "primeicons": "^2.0.0",
     "primeng": "^8.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
